--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 DATABASE_NAME=animal_fact_db_rs
-DATABASE_URL=postgresql://postgres:postgres@localhost
+DATABASE_URL=postgresql://postgres:postgres@db
 CATS_SOURCE=https://catfact.ninja
