--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,13 @@
 version: '3.1'
 
 services:
+  app:
+    build: .
+    container_name: clean-arch-rust
+    volumes:
+      - .:/home/rust/app
+    ports:
+      - 8888:8888
 
   db:
     image: postgres
